Amarok ChangeLog
================
(C) 2002-2025 the Amarok authors.

VERSION 3.2.2 UNRELEASED
  FEATURES:
  CHANGES:
  BUGFIXES:
   * Fix DAAP collection connections, browsing and playing (BR 498654)

VERSION 3.2.1
  CHANGES:
   * Support gpodder and lastfm on Qt6 builds
   * Limit maximum current track font size more when context view is narrow

  BUGFIXES:
   * Fix displaying settings button for Internet services
   * Enable Wikipedia context applet on Qt6 builds
   * Don't crash when copying multiple files to MTP device (BR 467616)
   * Avoid unnecessarily flooding MTP devices with storage capacity queries
   * Compilation fixes for various compiler + Qt6 version combinations

VERSION 3.2.0
  BUGFIXES:
   * Probably fix occasional crashes when clearing CompondProgressBars

VERSION 3.1.81
  FEATURES:
   * Building an experimental Qt6/KF6 Amarok version is now possible
   * Allow filtering collection by lack of tag / empty tag (BR 325317)

  CHANGES:
   * Amarok now depends on KDE Frameworks 5.108
   * Show current track context applet by default

  BUGFIXES:
   * Probably fix occasional crashes when filtering collection (BR 492406)
   * Fix context view applets on Qt6/KF6
   * Fix Ampache login on server version 5.0.0 and later (BR 496581)
   * Fix crash if Ampache login is redirected (BR 396590)

VERSION 3.1.1
  CHANGES:
   * Most of the context view QML items ported from QtControls 1 to QtControls 2
   * Default to no fadeout on pause and stop (BR 491603)

  BUGFIXES:
   * Actually show the file browser panel toolbar
   * Fix track editor autocompletions (BR 491520)
   * Ensure home icon is shown in browser breadcrumb widgets (BR 491354)

VERSION 3.1.0
  BUGFIXES:
   * Small UI and compilation fixes

VERSION 3.0.81
  FEATURES:
   * Last.fm plugin updated to use token-based authentication method and to notify
     user of session key errors (BR 414826, BR 327547)
   * Reintroducing Last.fm Similar Artists context applet - a new Amarok 3 version