@@ -7,6 +7,7 @@ VERSION 3.2.2 UNRELEASED
   CHANGES:
   BUGFIXES:
    * Fix DAAP collection connections, browsing and playing (BR 498654)
+   * Fix first line of lyrics.ovh lyrics missing (BR 493882)
 
 VERSION 3.2.1
   CHANGES:
